Source/WebKit2/UIProcess/ios/PageClientImplIOS.mm
@@ -172,7 +172,7 @@ bool PageClientImpl::isViewFocused()
 
 bool PageClientImpl::isViewVisible()
 {
-    if (isViewInWindow() && !m_contentView.isBackground)
+    if (isViewInWindow() && !m_webView._isBackground)
         return true;
     
     if ([m_webView _isShowingVideoPictureInPicture])
